# espo

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.json  config.json.sample  docker-entrypoint.sh  hostfn.sh  overview.md  package-lock.json  pretty.json  response.json  run.sh  run_tests.sh  run_traces_probe.sh  sample.config.json  sustxs.txt  upload.sh
agent-context/: metashrew-adapter-refactor.md  oyl-api.ts
context/: 2-oyl-migration-plan.md  6-oylapi-implementation-plan.md
context/espo-indicies/: ammdata.md  essentials.md  migration.md  oylapi.md  pizzafun.md  subfrost.md
context/oylapi-migration-endpoints/: 1-5.md  11-15.md  21-25.md  26-remaining.md  6-10.md
docs/: 1-overview.md  2-oyl-migration-plan.md  ammdata-liquidity-path-feature.md  index-size-audit.md  index-size-findings.md  oyl-wallet-api-payloads.ts
docs/oylapi-migration-endpoints/: 11-15.md  16-20.md
proto/: alkanes.proto
resources/: btc_usd_historical.json
scripts/: run.sh  run2.sh  run_index_size_audit.sh
src/: bitcoind_flexible.rs  config.rs  consts.rs  debug.rs  lib.rs  main.rs  schemas.rs
src/alkanes/: defs.rs  metashrew.rs  mod.rs  trace.rs  utils.rs
src/core/: blockfetcher.rs
src/explorer/: api.rs  consts.rs  i18n.rs  mod.rs  paths.rs
src/explorer/assets/: style.css
src/explorer/components/: alk_balances.rs  block_carousel.rs  dropdown.rs  footer.rs  header.rs  layout.rs  mod.rs  svg_assets.rs  table.rs  tx_view.rs
src/explorer/pages/: address.rs  alkane.rs  alkanes.rs  block.rs  common.rs  home.rs  mod.rs  search.rs  state.rs  tx.rs
src/modules/: defs.rs  mod.rs
src/modules/ammdata/: config.rs  consts.rs  main.rs  mod.rs  rpc.rs  schemas.rs  storage.rs
src/modules/ammdata/price_feeds/: defs.rs  historical_backfill.rs  mod.rs  uniswap.rs
src/modules/ammdata/utils/: activity.rs  candles.rs  index_activity.rs  index_factories.rs  index_finalize.rs  index_pool_metrics.rs  index_pools.rs  index_snapshot.rs  index_state.rs  index_tokens.rs  live_reserves.rs  mod.rs  reserves.rs  search.rs
src/modules/essentials/: consts.rs  main.rs  rpc.rs  storage.rs
src/modules/essentials/utils/: creation_meta.rs  inspections.rs  mod.rs  names.rs
src/modules/essentials/utils/balances/: defs.rs  lib.rs  mod.rs  tests.rs  utils.rs
src/modules/fujin/: config.rs  consts.rs  main.rs  mod.rs  rpc.rs  schemas.rs  storage.rs
src/modules/fujin/utils/: detect.rs  index_activity.rs  index_epochs.rs  index_settlement.rs  mod.rs
src/modules/oylapi/: config.rs  main.rs  mod.rs  ordinals.rs  server.rs  storage.rs
src/modules/pizzafun/: consts.rs  main.rs  mod.rs  rpc.rs  storage.rs
src/modules/subfrost/: consts.rs  main.rs  mod.rs  rpc.rs  schemas.rs  storage.rs
src/runtime/: aof.rs  block_metadata.rs  dbpaths.rs  height_indexed_storage.rs  mdb.rs  mempool.rs  mod.rs  pointers.rs  rpc.rs  sdb.rs  state_at.rs  tree_db.rs
src/tertiary/: entry.rs  keys.rs  mod.rs  trace.rs  views.rs
src/test_utils/: amm_helpers.rs  chain_builder.rs  config_builder.rs  fixtures.rs  metashrew_runtime.rs  mock_node.rs  mod.rs  tertiary_runtime.rs  trace_helpers.rs
src/tests/: mod.rs  wasm_amm_tests.rs  wasm_amm_tests_old.rs
src/utils/: electrum_like.rs  mod.rs
test_data/: AMM_SETUP.md  README.md  block_893531.hex  config_mainnet.json
tests/: ammdata_coverage.rs  ammdata_e2e.rs  ammdata_e2e.rs.bak  ammdata_full_integration.rs  ammdata_full_integration.rs.bak  ammdata_integration.rs  ammdata_integration.rs.bak  ammdata_with_amm.rs  basic_chain_building.rs  essentials_balance.rs  essentials_coverage.rs  fujin_coverage.rs  oylapi_e2e.rs  oylapi_integration.rs  oylapi_integration.rs.bak  pizzafun_coverage.rs  regression_893531.rs  subfrost_coverage.rs  tertiary_integration.rs  tertiary_views_coverage.rs  test_harness_basic.rs
tests/common/: mod.rs  test_harness.rs
tests/wasm/: ammdata_amm_wasm.rs
