[package]
name = "espo"
version = "0.1.0"
edition = "2024"
default-run = "espo"

[lib]
name = "espo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
hex = "0.4.3"
rocksdb = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
protobuf-json-mapping = "3.7.2"
serde_json = "1.0.143"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
bitcoin = "0.32.7"
electrum-client = "0.24.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
tarpc = { version = "0.37", features = ["tokio1", "serde1", "serde-transport", "tcp"] }
borsh = { version = "1.5.7", features = ["derive"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-serde = {version = "0.9.0", features = ["json"]}
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f"}
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }
alkanes-cli-common = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f"} 
alkanes-trace-transform = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f"} 
bitcoincore-rpc = "0.19.0"
lru = "0.16.1"
prost = "0.12.6"
maud = "0.26.0"
