[package]
name = "espo"
version = "0.1.0"
edition = "2024"
default-run = "espo"

[lib]
name = "espo"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "espo"
path = "src/main.rs"
required-features = ["binary"]

[features]
# Feature that's only available for non-WASM builds
binary = []
test-utils = ["alkanes", "metashrew-core", "protorune", "metashrew-runtime", "rockshrew-runtime", "wasmtime"]

[dependencies]
anyhow = "1.0.99"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
protobuf-json-mapping = "3.7.2"
serde_json = "1.0.143"
borsh = { version = "1.5.7", features = ["derive"] }
futures = "0.3.31"
bitcoin = "0.32.7"
prost = "0.12.6"
maud = "0.26.0"
wasm-bindgen = "0.2.100"
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f"}
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }

# Non-WASM dependencies (server, network, DB, CLI, etc.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64 = "0.22.0"
clap = { version = "4.5.47", features = ["derive"] }
rocksdb = "0.21.0"  # Matching rockshrew-runtime version
tempfile = "3.22"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
electrum-client = "0.24.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
tarpc = { version = "0.37", features = ["tokio1", "serde1", "serde-transport", "tcp"] }
tokio-stream = "0.1.17"
tokio-serde = {version = "0.9.0", features = ["json"]}
time = { version = "0.3.36", features = ["formatting"] }
alloy-primitives = "0.8.7"
bitcoincore-rpc = "0.19.0"
lru = "0.16.1"
alkanes-cli-common = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f"}
alkanes-trace-transform = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f"}

# Optional dependencies for test utilities
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f", optional = true }
metashrew-core = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f", optional = true }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f", optional = true }
metashrew-runtime = { path = "reference/metashrew/crates/metashrew-runtime", optional = true }
rockshrew-runtime = { path = "reference/metashrew/crates/rockshrew-runtime", optional = true }
wasmtime = { version = "18.0", features = ["async"], optional = true }

[dev-dependencies]
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f", features = ["test-utils"] }
metashrew-core = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f", features = ["test-utils"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f", features = ["test-utils"] }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "297da14326ba1f3bec8f45c918df7fa9c3bf866f" }
wasm-bindgen-test = "0.3.49"
